Port ektogamat boilerplate to Vite.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="twitter:title" content="EKTOGAMAT THREEJS BOILERPLATE">
         <meta name="twitter:description" content="A threejs example using threejs boilerplate - by Anderson Mancini">
         <meta name="twitter:image" content="../static/cover.jpg">
-      
+
         <meta name="keywords" content="ThreeJS, HTML, CSS, JavaScript">
         <meta name="author" content="Anderson Mancini">
         <link rel="apple-touch-icon" sizes="180x180" href="../static/favicon/apple-touch-icon.png">
@@ -29,6 +29,6 @@
         <meta name="theme-color" content="#ffffff">
     </head>
     <body>
-
+      <script type="module" src="/src/script.js"></script>
     </body>
 </html>
